--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
   pull_request:
   schedule:
-    - cron: '0 2 * * *' 
+    - cron: '0 2 * * *'  
 
 jobs:
   test:
@@ -17,17 +17,29 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Use system Python version
-        run: python3 --version  
+      - name: Use system Python
+        run: python3 --version
 
-      - name: Install Python dependencies
+      - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip
           pip3 install -r requirements.txt
       - name: Install Playwright browsers
         run: |
           python3 -m playwright install --with-deps
-      - name: Run all Behave features in a single command
+      - name: Run only login.feature tests with Behave
         run: |
           mkdir -p reports
-          behave features/login/login.feature --no-capture 
+          behave features/login/login.feature --no-capture --format json.pretty --outfile reports/cucumber_report.json
+      - name: Update Excel test report
+        run: |
+          python3 utils/excel_updater.py
+      - name: Generate test dashboard
+        run: |
+          python3 utils/playwright_dashboard.py
+      - name: Upload reports as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-reports
+          path: |
+            reports/
